--- a/index.html
+++ b/index.html
@@ -693,11 +693,11 @@
                 "difficulty": "Real",
                 "question": "P is\nQ is\nR is\nS is",
                 "options": [
-                    "Acetylcholine",
-                    "Hydralazine",
-                    "Norepinephrine",
-                    "Isoproterenol",
-                    "Edrophonium"
+                    "P: Hydralazine - Q: Norepinephrine - R: Isoproterenol - S: Acetylcholine",
+                    "P: Norepinephrine - Q: Hydralazine - R: Isoproterenol - S: Edrophonium",
+                    "P: Isoproterenol - Q: Norepinephrine - R: Hydralazine - S: Acetylcholine",
+                    "P: Acetylcholine - Q: Norepinephrine - R: Isoproterenol - S: Hydralazine",
+                    "P: Edrophonium - Q: Norepinephrine - R: Isoproterenol - S: Acetylcholine"
                 ],
                 "correct": 0,
                 "explanation": "P: Hydralazine (vasodilator blocked by hexamethonium). Q: Norepinephrine (alpha and beta activation). R: Isoproterenol (pure beta agonist). S: Acetylcholine (muscarinic agonist with reflex tachycardia reversed by hexamethonium).",
