--- a/index.html
+++ b/index.html
@@ -14024,7 +14024,7 @@
                             </div>
                         )}
 
-                        <div style={{ display: 'flex', justifyContent: 'space-around', marginTop: '20px'}}>
+                        <div style={{ display: 'flex', justifyContent: 'space-around', marginTop: '20px', flexWrap: 'wrap' }}>
                             {currentQuestion > 0 && (
                                 <button className="btn btn-secondary" onClick={handlePreviousQuestion}>
                                     Previous Question
